--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -9,6 +9,6 @@
 @import "services.scss";
 @import "portfolio.scss";
 @import "timeline.scss";
-@import "team.scss";
+@import "about.scss";
 @import "contact.scss";
 @import "footer.scss";
