--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -3,11 +3,12 @@ header.masthead {
   text-align: center;
   color: white;
   //background-image: url('../img/header-bg.jpg');
-  background-color: #e1efe2;
-  background-repeat: no-repeat;
+  background-color: $off-white-green;
+  //background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  @include background-cover;
+  height: 100%;
+  //@include background-cover;
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
@@ -17,14 +18,27 @@ header.masthead {
       font-style: italic;
       line-height: 22px;
       margin-bottom: 25px;
-      @include serif-font;
+      @include off-white-font;
     }
     .intro-heading {
       font-size: 50px;
       font-weight: 700;
       line-height: 50px;
       margin-bottom: 25px;
-      @include heading-font;
+      @include off-white-font;
+    }
+    .intro-bottom {
+      a {
+        color: $black;
+        &:hover {
+          color: darken($primary, 10%);
+        }
+      }
+      font-size: 22px;
+      font-style: bold;
+      line-height: 22px;
+      margin-bottom: 25px;
+      @include off-white-font;
     }
   }
 }
@@ -38,14 +52,14 @@ header.masthead {
         font-style: italic;
         line-height: 40px;
         margin-bottom: 25px;
-        @include serif-font;
+        @include off-white-font;
       }
       .intro-heading {
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
         margin-bottom: 50px;
-        @include heading-font;
+        @include off-white-font;
       }
     }
   }
