--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,6 +18,8 @@
   font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 @mixin heading-font {
-  font-family: 'Helvetica Bold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  //font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+@mixin off-white-font {
+  font-family: 'Helvetica Bold', Helvetica, Arial, sans-serif;
 }
