--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,4 +14,6 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
+$off-white-green: #e1efe2 !default;
+
 $primary: #fed136 !default;
