--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -6,9 +6,9 @@
 // Components
 @import "navbar.scss";
 @import "masthead.scss";
-@import "services.scss";
+@import "about.scss";
+@import "research";
 @import "portfolio.scss";
 @import "timeline.scss";
-@import "about.scss";
 @import "contact.scss";
 @import "footer.scss";
