--- a/scss/_research.scss
+++ b/scss/_research.scss
@@ -36,7 +36,8 @@ section#research {
   }
   .keyword {
     //background-color: rgba(130,96,0,.5);
-    background-color: $off-white-green;
+    background-color: rgb(137, 145, 150);
+    color: white;
   }
   .asterisk {
     font-size: x-small;
