--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -2,7 +2,7 @@
 section#about {
   //margin-bottom: 50px;
   text-align: left;
-  background-color: #ffffff;
+  //background-color: #ffffff;
   padding-top: 0px;
   img {
     width: 225px;
