--- a/scss/_research.scss
+++ b/scss/_research.scss
@@ -2,7 +2,7 @@
 section#research {
   //margin-bottom: 50px;
   text-align: left;
-  background-color: #FFF5EE;
+  //background-color: #FFF5EE;
   padding-top: 0px;
   h1 {
     margin-bottom: 50px;
