--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -7,7 +7,8 @@
 @import "navbar.scss";
 @import "masthead.scss";
 @import "about.scss";
-@import "research";
+@import "research.scss";
+@import "projects.scss";
 @import "portfolio.scss";
 @import "timeline.scss";
 @import "contact.scss";
