--- a/scss/_research.scss
+++ b/scss/_research.scss
@@ -16,6 +16,9 @@ section#research {
     margin-top: 0;
     text-align: left;
   }
+  a {
+    color: #6C757D !important;
+  }
   #news {
     padding-top: 12px;
   }
