--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,6 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $off-white-green;
+  background-color: $bg-color;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
@@ -63,7 +63,7 @@
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
-      background-color: $off-white-green;
+      background-color: $bg-color;
       .navbar-brand {
         font-size: 1.25em;
         padding: 12px 0;
