--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,30 +43,10 @@ html {
             @extend .align-left;
             width: 95%;
             height: 100%;
-            // & body {
-            //     height:100%;    
-            //     @include display-box;           
-            //     @include box-align(center);
-            // }
-            // & body {
-            //     height:100%;    
-            //     display:-ms-flexbox;
-            //     display:-moz-box;
-            //     display:-webkit-box;
-            //     display:-webkit-flex;
-            //     display:flex;       
-            //     -ms-align-items:center;
-            //     -moz-align-items:center;
-            //     -webkit-align-items:center;
-            //     align-items:center;
-            // }
             display: flex;
             justify-content: center;
             align-items: center;
-
-            // position: relative;
-            // top: 100%;
-            // transform: translateY(50%);
+            vertical-align: middle;
         }
     }
 
