--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,5 +1,7 @@
+<div class="publications">
+    <h2>publications</h2>
+    {% bibliography -f papers -q @*[selected=true]* %}
 
-          <div class="publications">
-            <h2>selected publications</h2>
-            {% bibliography -f papers -q @*[selected=true]* %}
-          </div>
+    <h2>talks</h2>
+    {% bibliography -f talks -q @*[selected=true]* %}
+</div>
