--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,7 +93,6 @@ blockquote {
 // Profile
 
 .profile {
-  margin-left: 1rem;
   width: 100%;
 
   .address {
@@ -102,8 +101,22 @@ blockquote {
     font-family: monospace;
     p {
       display: inline-block;
-      margin: 0;
+      margin: auto;
     }
+  }
+}
+
+.profile.float-right{
+  margin-left: 1rem;
+}
+.profile.float-left{
+  margin-right: 1rem;
+}
+.profile.center{
+  margin: auto;
+  .header {
+    text-align: center;
+    font-size: x-large;
   }
 }
 
@@ -245,10 +258,11 @@ blockquote {
 
 // Social (bottom)
 
+  
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 3rem;
     a {
       i::before {
         color: var(--global-text-color);
@@ -266,6 +280,18 @@ blockquote {
   }
 }
 
+.profile.center.contact-icons {
+    font-size: 1.5rem;
+    i::before {
+        color: var(--global-text-color);
+        transition-property: all 0.2s ease-in-out;
+    }
+    &:hover {
+        i::before {
+        color: var(--global-theme-color);
+        }
+    }
+}
 
 // Footer
 footer.fixed-bottom {
@@ -303,6 +329,7 @@ footer.sticky-bottom {
     
     .list-group-item {
       background-color: inherit;
+      border-color: var(--global-divider-color);
 
       .badge {
         color: var(--global-card-bg-color) !important;
@@ -549,6 +576,7 @@ footer.sticky-bottom {
             color: var(--global-theme-color);
             border-color: var(--global-theme-color);
           }
+          
         }
       }
       .hidden {
@@ -651,3 +679,58 @@ html.transition *:after {
     }
   }
 }
+
+progress {
+     /* Positioning */
+     position: fixed;
+     left: 0;
+     top: 56px;
+     z-index: 10;
+   
+     /* Dimensions */
+     width: 100%;
+     height: 1px;
+   
+     /* Reset the appearance */
+     -webkit-appearance: none;
+        -moz-appearance: none;
+             appearance: none;
+   
+     /* Get rid of the default border in Firefox/Opera. */
+     border: none;
+   
+     /* Progress bar container for Firefox/IE10  */
+     background-color: transparent;
+   
+     /* Progress bar value for IE10  */
+     color: var(--global-theme-color);
+ }
+ 
+ progress::-webkit-progress-bar {
+     background-color: transparent;
+ }
+   
+ progress::-webkit-progress-value {
+     background-color: var(--global-theme-color);
+ }
+   
+ progress::-moz-progress-bar {
+     background-color: var(--global-theme-color);
+ }
+ 
+ .progress-container {
+     width: 100%;
+     background-color: transparent;
+     position: fixed;
+     top: 56px;
+     left: 0;
+     height: 5px;
+     display: block;
+ }
+ 
+ .progress-bar {
+     background-color: var(--global-theme-color);
+     width: 0%;
+     display: block;
+     height: inherit;
+ }
