--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,8 @@ $orange-color:        #F29105 !default;
 $blue-color:          #0076df !default;
 $blue-color-dark:     #00369f !default;
 $cool-blue-color:     #332faf !default;
+$ocean-blue:          #2B65EC !default;
+$ocean-blue-2:        #4576e8 !default;
 $cyan-color:          #2698BA !default;
 $light-cyan-color:    lighten($cyan-color, 25%);
 $green-color:         #00ab37 !default;
@@ -64,7 +66,8 @@ $code-bg-color-dark:      #2c3237 !default;
 $theme-color-light:             $cmu-skibo-red;
 
 // $theme-color-dark:              $cyan-color;
-$theme-color-dark:              $cmu-palladian-green;
+// $theme-color-dark:              $cmu-palladian-green;
+$theme-color-dark:              $ocean-blue-2;
 
 
 
