--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,7 @@ layout: default
 
         {% if page.profile -%}
             {% if page.profile.align == "center" -%}
-                <div class="profile center w-25 justify-content-center">
+                <div class="profile center justify-content-center">
                     {%- if page.profile.image %}
                         {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
         
