--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,6 +54,10 @@ $cmu-palladian-green: #6fc597 !default;
 // 0 96 77 42
 $cmu-skibo-red: #940622 !default;
 
+$nyu-violet: #57068c !default;
+$nyu-deep-violet: #330662 !default;
+$nyu-teal: #009b8a !default;
+
 
 // $dark-blue: #20007F !default;
 // $dark-blue: rgb(32, 48, 128) !default;
